# web2md

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  test-pdf-api.sh  vercel.json
api/: .gitignore  README.md  batch.ts  download.ts  extract.ts  package-lock.json  package.json  pdf.ts  tsconfig.json  vercel.json
api/api/: batch.ts  extract.ts
api/api/batch/: route.ts
api/api/extract/: route.ts
api/lib/: extractor.ts  pdf-generator.ts  tar.ts
api/types/: turndown-plugin-gfm.d.ts
backend/: README.md  index.html  package.json  tsconfig.json  vercel.json
backend/lib/: extractor.ts
backend/public/: lark-converter.js
cli/: .gitignore  README.md  pyproject.toml  requirements.txt
cli/web_to_md/: __init__.py  __main__.py  extractor.py
docs/: CHANGELOG.md  DECISIONS.md  KNOWN_ISSUES.md
